# Thesis-SastLLM

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
configs/: base.yaml  classification.yaml  clustering.yaml  comment_nodes.yaml  important_nodes.yaml  languages.yaml  llms.yaml  split.yaml
database/: 00__init.sql  01__triggers.sql
docs/: CONFIG.md  DB_SCHEMA.md  PIPELINE.md  SETUP.md  TROUBLESHOOTING.md  USAGE.md
models/classification/trained_models/binary_classifier_model/: config.json  meta.json  test_metrics.json  test_predictions.json  train_metrics.json  train_predictions.json
models/classification/trained_models/binary_classifier_model/dummy_dataset/: test_metrics.json  (+1 more)
plots/shap/: ids.npy  inputs.npy  labels.npy  meta.json  shap_values.npy
src/sastllm/: __init__.py
src/sastllm/analyzers/: __init__.py  functionality_analyzer.py
src/sastllm/cluster/: __init__.py  clusterer.py  embedder.py
src/sastllm/configs/: __init__.py  config.py  logging_config.py
src/sastllm/db/: __init__.py  batch_datasource.py  db.py  models.py
src/sastllm/db/managers/: embeddings_manager.py  file_manager.py  functionality_manager.py  repository_manager.py  snippet_manager.py
src/sastllm/dtos/: __init__.py  create_dtos.py  get_dtos.py  update_dtos.py
src/sastllm/extractors/: __init__.py  functionality_extractor.py
src/sastllm/ml/: __init__.py  confusion_matrix_callback.py  dataset.py  model.py  repository_classifier.py
src/sastllm/parsers/: __init__.py  code_chunker.py  code_parser.py  comment_stripper.py  tree_sitter_generator.py
src/sastllm/processors/: __init__.py  batch_file_processor.py  batch_files_generator.py  code_processor.py  snippet_processor.py  tag_processor.py
src/sastllm/prompt/: __init__.py  functionality_prompt_generator.py
src/sastllm/utils/: __init__.py  confusion_matrix.py  custom_llm.py  dataset_splitter.py  explain_shapley.py  jsonl_folder.py  normalizer.py  repository_encoder.py
src/scripts/: cli.py  download_dataset.py  pipelines.py  utils.py
