[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-sastllm"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "dotenv>=0.9.9",
    "kneed>=0.8.5",
    "langchain>=1.0.5",
    "langchain-core>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.2",
    "langchain-openai>=1.0.2",
    "lightning>=2.5.6",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pip>=25.3",
    "psycopg[binary,pool]>=3.2.12",
    "qdrant-client>=1.15.1",
    "spacy>=3.8.8",
    "sqlalchemy>=2.0.44",
    "tensorboard>=2.20.0",
    "tiktoken>=0.12.0",
    "tree-sitter>=0.25.2",
    "typer>=0.20.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "sentence-transformers>=5.1.2",
    "datasets==3.6.0",
    "huggingface-hub>=0.35.3",
    "shap>=0.49.1",
    "ruff>=0.14.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "black>=24.10.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 150
target-version = "py312"
exclude = [
    "build",
    "dist",
    "qdrant_storage",
    "models/trained_models",
    "**/migrations/**",
]
extend-select = ["E", "F", "I"]
ignore = [
    "E203",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
line-ending = "lf"

[project.scripts]
sastllm = "scripts.cli:main"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126"},
]
torchvision = [
    { index = "pytorch-cu126" },
]
torchaudio = [
    { index = "pytorch-cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true


[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sastllm*", "scripts*"]
exclude = ["tests*", "evaluations*", "examples*"]

[tool.pyright]
venvPath = "."
venv = ".venv"
